# kaggle_ptcg_engine

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
benchmarks/: __init__.py  bench_engines.py
cg/: api.py  game.py  native_backend.py  native_payload.py  shadow_backend.py
data/: __init__.py  native_cg_metadata.json
engine/: CMakeLists.txt  build.ps1
engine/src/: bindings.cpp
engine/src/ptcg/: card_db.cpp  card_db.gen.hpp  card_db.hpp  effect_vm.hpp  effects.gen.hpp  id_tensors.cpp  id_tensors.hpp  rl.cpp  rl.hpp  small_vec.hpp  state.cpp  state.hpp  types.hpp  vector_env.cpp  vector_env.hpp  version.cpp  version.hpp
engine/src/search/: debug_search.cpp  debug_search.hpp
engine/tests/: test_id_tensors.cpp
notebooks/: kaggle_quickstart.ipynb
ptcg/: __init__.py  id_tensors_example.py  jax_nn.py  nn.py
ptcg/cg/: api.py  game.py  native_backend.py  native_payload.py  shadow_backend.py  sim.py
tests/: test_native_cg_compat.py  test_nn_adapter.py  test_ppo_benchmark.py
validation/: __init__.py  decks.py  native_compare.py  native_compare_core.py  random_decks.py  smoke.py
validation/oracle/: README.md  __init__.py  canonical.py  random_branch_parity.py
