[build-system]
requires = ["setuptools>=70", "wheel", "cmake>=3.18", "ninja", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-ptcg-engine"
version = "0.1.0"
description = "Native Pokemon TCG engine compatible with the Kaggle cg API."
license = { text = "LicenseRef-Kaggle-Competition-Use-Only" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
build = [
    "build>=1.2",
    "cibuildwheel>=2.18",
    "cmake>=3.18",
    "ninja",
    "pybind11>=2.11",
]
test = [
    "pytest>=8",
]
nn = [
    "torch>=2.0",
]
jax = [
    "jax>=0.4",
]

[tool.setuptools]
packages = ["benchmarks", "ptcg", "ptcg.cg", "data", "validation", "validation.oracle"]

[tool.setuptools.package-data]
data = ["*.csv", "*.json"]

[tool.cibuildwheel]
build = "cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64"
skip = "*musllinux*"
test-command = "python -m validation.smoke"

[tool.cibuildwheel.linux]
before-build = "pip install cmake ninja pybind11"
